# clean-code-coockbook

./: .markdown-link-check.json  .markdownlint.json  DESIGN.md  Makefile  QUICKSTART.md  README.md  ai-driven-software-engineering-workflows.md  gemini3_setup.sh
.github/workflows/: ci.yml  go-ci.yml  markdown-lint.yml  python-ci.yml
.trunk/: trunk.yaml
01_async_concepts/: README.md  go.md  python.md
02_architecture_blueprint/: README.md  STRUCTURE.md  go.md  python.md
03_language_specific_guidelines/: README.md
03_language_specific_guidelines/go/: README.md  concurrency.md  error_handling.md  interfaces.md  simplicity.md  testing.md
03_language_specific_guidelines/python/: README.md  asyncio.md  dependency_injection.md  metaprogramming.md  mypy.md  pydantic.md
04_polyglot_architecture/: README.md  grpc.md  python_go_bridge.md
05_tooling_and_best_practices/: README.md  ci_cd.md  linting.md  observability.md  security.md
06_contribution_guidelines/: CONTRIBUTING.md
clean_python/: .env.example  .env.test  IMPLEMENTATION_NOTES.md  pyproject.toml
clean_python/docs/: README.md  TUTORIAL.md
clean_python/src/: __init__.py  config.py  logging_config.py
clean_python/src/adapters/: orm.py
clean_python/src/domain/: models.py  ports.py
clean_python/src/entrypoints/: api.py  deps.py  grpc_server.py
clean_python/src/service_layer/: handlers.py  unit_of_work.py
clean_python/tests/: conftest.py  test_adapters_repository.py  test_domain_models.py  test_service_layer.py
proto/: recommendations.proto  user_bridge.proto
python/: requirements-dev.txt
(+30 files in other folders)
